# mecanica-geral

./: .editorconfig  .gitignore  README.md  pyproject.toml
src/: firstProject.ipynb
src/utils/: linear_algebra.py
