[project]
name = "mecanica-geral"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas-GBP",email = "lucas.bitencourte.pedroso@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy (>=2.4.4,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "jupyterlab (>=4.5.6,<5.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)"
]

[tool.poetry]
packages = [{include = "mecanica_geral", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
