[project]
name = "mecanica-geral"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas-GBP",email = "lucas.bitencourte.pedroso@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy (>=2.4.4,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "jupyterlab (>=4.5.6,<5.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)"
]

[tool.poetry]
packages = [{include = "mecanica_geral", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=1.20.0,<2.0.0)"
]

[tool.mypy]
python_version = "3.14"
strict = true

warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
